changed the date format in config.toml to . instead of -, and changed some HTML in nostyleplease/layouts/index.html to put the content below menu i hope

--- a/themes/nostyleplease/layouts/index.html
+++ b/themes/nostyleplease/layouts/index.html
@@ -8,5 +8,6 @@
 </header>
 {{ .Content }}
 {{ partial "menu_item.html" (dict "context" . "collection" $.Site.Data.menu.entries) }}
+{{ .Content }}
 
 {{ end }}
