--- a/themes/nostyleplease/layouts/index.html
+++ b/themes/nostyleplease/layouts/index.html
@@ -21,7 +21,8 @@
   		const randomIndex = Math.floor(Math.random() * quotes.length);
   		return quotes[randomIndex];
 	const result = generateRandomQuote();
-	alert(result);
+        
+	alert(console.log(result));
 	}
     </script>
 
