--- a/themes/nostyleplease/layouts/index.html
+++ b/themes/nostyleplease/layouts/index.html
@@ -10,8 +10,31 @@
 </header>
 
 <body>
-    <p> hello world </p>
+    <p id="output"> </p>
+  
 </body>
+
+    <script>
+
+         // Define an array of quotes
+	const quotes = [
+  		"The only way to do great work is to love what you do. - Steve Jobs",
+ 		 "In the middle of every difficulty lies opportunity. - Albert Einstein",
+  		"The future belongs to those who believe in the beauty of their dreams. - Eleanor Roosevelt",
+  		"The best way to predict the future is to invent it. - Alan Kay",
+  		// Add more quotes as needed
+		];
+
+	// Function to generate a random quote
+	function generateRandomQuote() {
+  		const randomIndex = Math.floor(Math.random() * quotes.length);
+  		return quotes[randomIndex];
+	const result = generateRandomQuote();
+        document.getElementById('output').textContent = result;
+	
+	}
+    </script>
+
 
 {{ partial "menu_item.html" (dict "context" . "collection" $.Site.Data.menu.entries) }}
 
