changed layouts/index.html and added an entry to TITA

--- a/themes/nostyleplease/layouts/index.html
+++ b/themes/nostyleplease/layouts/index.html
@@ -22,6 +22,16 @@
  		 "In the middle of every difficulty lies opportunity. - Albert Einstein",
   		"The future belongs to those who believe in the beauty of their dreams. - Eleanor Roosevelt",
   		"The best way to predict the future is to invent it. - Alan Kay",
+      		"How we spend our days is, of course, how we spend our lives - Annie Dillard",
+		"I had thought that beauty was just something to behold; I didn't know it was something you could do. - Toni Morrison",
+		"To live is the rarest thing in the world. Most people just exist, that's all. - Oscar Wilde",
+		"Be curious, not judgmental. - Walt Whitman",
+		"sticky note enthusiast",
+		"touch some grass today",
+		"chase shiny things",
+		"Almost everything will work again if you unplug it for a few minutes, including you. - Anne Lammott",
+		"Rest is productive.",
+		"Enjoy the journey."
   		// Add more quotes as needed
 		];
 
