--- a/themes/nostyleplease/layouts/index.html
+++ b/themes/nostyleplease/layouts/index.html
@@ -31,7 +31,24 @@
 		"chase shiny things",
 		"Almost everything will work again if you unplug it for a few minutes, including you. - Anne Lammott",
 		"Rest is productive.",
-		"Enjoy the journey."
+		"Enjoy the journey.",
+		"The Angels fly because they take themselves lightly. - GK Chesterton",
+		"Dance!",
+		"Duck!",
+		"Action is the answer.",
+		"If you're not growing, you're dying. - Farmers, I would assume.",
+		"Sometimes a change is as good as a rest.",
+		"Don't let the fear of stepping on a few toes stop you from dancing!",
+		"自己的路行最小心",
+		"You will always struggle with not feeling productive until you accept that your own joy can be something you produce. - Hank Green",
+		"Faith in silliness",
+		"Keep it simple",
+		"On a never-ending search for puns.",
+		"You can be a silly billy or you can be a Serious William. The choice is yours.",
+		"Just passing through.",
+		"Create your own culture.",
+		"Just passing through.",
+		"We do not see things as they are, we see them as we are. - Anais Nin",	
   		// Add more quotes as needed
 		];
 
