--- a/themes/nostyleplease/layouts/index.html
+++ b/themes/nostyleplease/layouts/index.html
@@ -4,7 +4,7 @@
 
     <style>
     body {
-        background: url('/Users/elliot/quickstart/static/background.png') no-repeat center center fixed;
+        background: url('/background.png') no-repeat center center fixed;
         background-size: cover;
         -webkit-background-size: cover;
         -moz-background-size: cover;
